[gd_scene load_steps=13 format=3 uid="uid://bplka6hpvaxoo"]

[ext_resource type="Script" path="res://scripts/job_selection.gd" id="1_m8htf"]
[ext_resource type="FontFile" uid="uid://j8ftvx0s2isn" path="res://asset/fonts/Windlass.ttf" id="2_7x2qm"]
[ext_resource type="FontFile" uid="uid://do4l076cggddp" path="res://asset/fonts/oldstyle_hplhs/OLDSH___.TTF" id="3_ujpe4"]

[sub_resource type="Gradient" id="Gradient_ix62f"]
offsets = PackedFloat32Array(0.0809969, 0.299065, 0.573209, 0.82243, 1)
colors = PackedColorArray(0.0807087, 0.0706913, 0.0051656, 1, 0.171405, 0.137704, 0.0192504, 1, 0.323154, 0.253888, 0.0495176, 1, 0.235294, 0.207843, 0.0470588, 1, 0.0819208, 0.0700412, 0.00646659, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tr5ji"]
gradient = SubResource("Gradient_ix62f")
fill_from = Vector2(0.0042735, 0.435897)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlrpq"]
bg_color = Color(0.0980392, 0.0862745, 0.0117647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.509804, 0.411765, 0.2, 1)
border_blend = true
shadow_size = 2
shadow_offset = Vector2(0, 2)

[sub_resource type="Theme" id="Theme_pcgb7"]
OptionButton/fonts/font = ExtResource("3_ujpe4")
OptionButton/styles/normal = SubResource("StyleBoxFlat_rlrpq")
OptionButton/styles/pressed = null

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_685qm"]
content_margin_top = 30.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q417c"]
bg_color = Color(0, 0, 0, 0.698039)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.509804, 0.411765, 0.2, 1)
border_blend = true
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ipd2"]
content_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msx7o"]
bg_color = Color(0, 0, 0, 0.705882)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.509804, 0.411765, 0.2, 1)
border_blend = true
expand_margin_left = 10.0
expand_margin_top = 2.0
expand_margin_right = 10.0
expand_margin_bottom = 2.0
shadow_size = 2
shadow_offset = Vector2(2, 2)

[sub_resource type="Theme" id="Theme_8x2cg"]
Label/styles/normal = SubResource("StyleBoxFlat_msx7o")

[node name="JobSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_m8htf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = SubResource("GradientTexture2D_tr5ji")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 4.8
anchor_right = 11.175
anchor_bottom = 7.95
offset_left = 64.0
offset_top = -58.0
offset_right = -83.0
offset_bottom = 94.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="JobDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_pcgb7")
theme_override_fonts/font = ExtResource("3_ujpe4")
alignment = 1

[node name="JobNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_7x2qm")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_685qm")
text = "Warrior"

[node name="JobDescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_ujpe4")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_q417c")
text = "A strength focused job. Warrior uses a two handed sword."
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 2

[node name="SkillsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("2_7x2qm")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_6ipd2")
text = "Unique Skills"

[node name="SkillsBox" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = SubResource("Theme_8x2cg")
theme_override_constants/separation = 8
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 11.2
anchor_top = 3.2
anchor_right = 27.2
anchor_bottom = 12.8
theme_override_constants/separation = 80
metadata/_edit_use_anchors_ = true

[node name="JobImage" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
stretch_mode = 4

[node name="JobCardImage" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
expand_mode = 3
